# Project-Atl-ntico-Intel

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: ci.yml
api/: _dashboard.html  analyze.py  atlas_demo.py  demo.py  health.py  index.py  network.py  requirements.txt  risk.py  sigint_demo.py
docs/: index.html
infrastructure/: docker-compose.dev.yml  docker-compose.yml
public/: index.html
requirements/: base.txt  dev.txt
scripts/: bootstrap_keys.py  migrate.py
src/atlantico/: __init__.py
src/atlantico/atlas/: __init__.py  observations.py
src/atlantico/atlas/analytics/: __init__.py  jurimetria.py
src/atlantico/atlas/connectors/: __init__.py  base.py  dou.py  lexml.py
src/atlantico/atlas/ingestion/: __init__.py  normalizer.py  pipeline.py
src/atlantico/atlas/ontology/: __init__.py  _common.py  acao_judicial.py  acordao_tcu.py  air.py  auto_infracao.py  consulta_publica.py  contrato_concessao.py  deliberacao.py  diretor_servidor.py  documento_bruto.py  evento_regulatorio.py  indicador_mercado.py  norma.py  processo_administrativo.py  regulado.py  stakeholder_politico.py
src/atlantico/atlas/storage/: __init__.py  mappers.py
src/atlantico/config/: logging.py  settings.py
src/atlantico/crypto/: __init__.py  agility.py  envelope.py  exceptions.py  hybrid.py  kem.py  key_manager.py  signatures.py
src/atlantico/finint/: __init__.py  observations.py
src/atlantico/finint/alerts/: __init__.py  generator.py  rules.py
src/atlantico/finint/connectors/: __init__.py  base.py  bcb_sgs.py  cvm_dados_abertos.py  ibge_sidra.py  siscomex_comex_stat.py  transparencia_contratos.py
src/atlantico/finint/models/: __init__.py  entity_relationship.py  financial_entity.py  financial_flow.py  market_indicator.py  public_contract.py  trade_flow.py
src/atlantico/geoint/: __init__.py  observations.py
src/atlantico/sigint/: __init__.py  observations.py
src/atlantico/storage/: __init__.py  database.py  encrypted_field.py
tests/: conftest.py
tests/integration/: test_finint_pipeline.py  test_geoint_pipeline.py  test_sigint_pipeline.py  test_storage_roundtrip.py
tests/security/: test_crypto_agility.py  test_key_rotation.py
tests/unit/atlas/: conftest.py  test_common.py  test_connector_dou.py  test_connector_lexml.py  test_connectors_base.py  test_jurimetria.py  test_normalizer.py  test_observations.py  test_ontology.py  test_pipeline.py  test_repositories.py  test_storage_mappers.py
tests/unit/crypto/: test_agility.py  test_envelope.py  test_hybrid.py  test_key_manager.py
tests/unit/storage/: test_audit_log.py  test_encrypted_field.py  test_key_store_repo.py
(+130 files in other folders)
