[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "atlantico"
version = "0.1.0"
description = "Projeto Atlântico — Plataforma de Inteligência com Criptografia Pós-Quântica Nativa"
requires-python = ">=3.12"
readme = "README.md"
license = { text = "Proprietário / Confidencial" }
authors = [{ name = "Projeto Atlântico" }]
# Deps mínimas para o demo Vercel (análise pura — sem PQC/PostGIS)
dependencies = [
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
    "networkx>=3.3",
]

[project.urls]
Repository = "https://github.com/Joaodesouzanery/Project-Atl-ntico-Intel"

[tool.hatch.build.targets.wheel]
packages = ["src/atlantico"]

# ─────────────────────────────────────────────
# Pytest
# ─────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "-v",
    "--tb=short",
]
markers = [
    "unit: testes unitários isolados",
    "integration: testes de integração (requerem PostgreSQL/Redis)",
    "security: testes de segurança e cripto-agilidade",
    "slow: testes lentos (operações KEM/Sign com parâmetros maiores)",
]

# ─────────────────────────────────────────────
# Coverage
# ─────────────────────────────────────────────
[tool.coverage.run]
source = ["src/atlantico"]
omit = ["tests/*", "scripts/*"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 85
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "@(abc\\.)?abstractmethod",
    "raise NotImplementedError",
]

# ─────────────────────────────────────────────
# Ruff (linting + formatting)
# ─────────────────────────────────────────────
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "W",   # pycodestyle
    "F",         # pyflakes
    "I",         # isort
    "B",         # flake8-bugbear
    "C4",        # flake8-comprehensions
    "UP",        # pyupgrade
    "SIM",       # flake8-simplify
    "S",         # flake8-bandit (security)
    "PTH",       # flake8-use-pathlib
]
ignore = [
    "S101",  # assert usado em testes
    "S105",  # possível senha em string — falso positivo em constantes de algoritmo
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S", "B"]  # testes podem usar assert e construções menos seguras

[tool.ruff.format]
quote-style = "double"

# ─────────────────────────────────────────────
# MyPy
# ─────────────────────────────────────────────
[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
exclude = ["tests/", "scripts/"]
